--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.nav{
+  width: 100%;
+  height: 10vh;
+  background-color: aqua;
+  color: black;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  height: 80vh;
+  color: black;
+  font-size: 15px;
+}
+
+.footer{
+  width: 100%;
+  height: 10vh;
+  background-color: black;
   color: white;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.student-container{
+  margin: 10px;
+  padding: 10px;
+  width: 30%;
+  height: 350px;
+  border: 1px solid salmon;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-student{
+  width: 150px;
+  height: 150px;
 }
